--- a/Ex0/pom.xml
+++ b/Ex0/pom.xml
@@ -5,11 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>pl.ultimasolution</groupId>
-    <artifactId>helloworld</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <name>Maven Project</name>
+    <artifactId>Ex0</artifactId>
+    <version>1.1-SNAPSHOT</version>
     <description>Sample Maven project with a working, deployable site.</description>
-    <url>https://ultimasolution.pl</url>
 
     <properties>
         <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
