--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,10 @@
     <packaging>pom</packaging>
     <description>Sample Maven project with a working, deployable site.</description>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
+    </properties>
     <modules>
         <module>Ex0</module>
         <module>Ex1</module>
@@ -19,6 +23,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
                 <configuration>
                     <source>8</source>
                     <target>8</target>
